syntax = "proto3";

package weather;

message WeatherStation {
    string station_id = 1;
    string location = 2;
    double latitude = 3;
    double longitude = 4;
}

message WeatherData {
    string station_id = 1;
    float temperature = 2;
    float humidity = 3;
    float wind_speed = 4;
    int64 timestamp = 5;
}

message StationRequest {
    string region = 1;
}

message StationDiagnosticsResponse {
    bool is_healthy = 1;
    string message = 2;
}

service WeatherService {
    rpc GetWeatherStations(StationRequest) returns (stream WeatherStation) {}
    rpc MonitorWeatherUpdate(WeatherStation) returns (stream WeatherData) {}
    rpc ReportStationDiagnostics(stream WeatherData) returns (StationDiagnosticsResponse) {}
}
